--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="projects">
       <h2>Projects</h2>
       <ul>
-        <li>Project 1 - A cool website</li>
+        <li>Project 1 - A cool website xxxxx</li>
         <li>Project 2 - A JavaScript app</li>
       </ul>
     </section>
